--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
 	<body>
-		<h1>Hello, World!</h1>
+		<h1>Rektroth</h1>
+		<p>Things:</p>
+		<ul>
+			<li>
+				<a href="./eclipse">Countdown to Solar Eclipse</a>
+				<a href="./mods">My Mods</a>
+			</li>
+		</ul>
 	</body>
 </html>
