--- a/mods.html
+++ b/mods.html
@@ -339,7 +339,7 @@
 		</div>
 		<div class="mod" id="entity-texture-features">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/BVzZfTc1/8652b3d18c262b33e0cf194d402977897267573a.png" />
+				<img src="https://cdn-raw.modrinth.com/data/BVzZfTc1/4a9fe8d33f8dcc4a61abf23919d9c04871f41937.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
@@ -394,22 +394,8 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<h2>Other Functionality and Performance Enhancements</h2>
-		<p>The following mods offer performance improvements and bug fixes beyond those provided by OptiFine.</p>
-		<div class="mod" id="debugify">
-			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/QwxR6Gcd/d1db8e74a5ad29908bd011ce271145cea349cd13.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/debugify" target="_blank">Debugify</a>
-				</h3>
-				<p>Fixes bugs.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.1</span>
-			</div>
-		</div>
+		<h2>Other Performance Enhancements</h2>
+		<p>The following mods offer performance improvements beyond those provided by OptiFine.</p>
 		<div class="mod" id="dynamic-fps">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/LQ3K71Q1/icon.png" />
@@ -468,7 +454,7 @@
 		</div>
 		<div class="mod" id="immediatelyfast">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/5ZwdcRci/ae81978f72653539e3de5bf837bbdfd6da102360.png" />
+				<img src="https://cdn-raw.modrinth.com/data/5ZwdcRci/a5345bd4095c5ba1e248997218c9ff4eca417e1c.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
@@ -522,6 +508,22 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
+		<h2>Bug Fixes</h2>
+		<p>These mods fix bugs.</p>
+		<div class="mod" id="debugify">
+			<div class="mod-icon">
+				<img src="https://cdn-raw.modrinth.com/data/QwxR6Gcd/d1db8e74a5ad29908bd011ce271145cea349cd13.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/debugify" target="_blank">Debugify</a>
+				</h3>
+				<p>Fixes bugs.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.1</span>
+			</div>
+		</div>
 		<div class="mod" id="memory-leak-fix">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/NRjRiSSD/icon.png" />
@@ -550,22 +552,22 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<div class="mod" id="sound-physics-remastered">
+		<div class="mod" id="whiteout">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/qyVF9oeo/798fbfae58ec95ad51f3e1d522b43227306c326c.png" />
+				<img src="https://raw.githubusercontent.com/Rektroth/Whiteout/master/src/main/resources/assets/whiteout/icon.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/sound-physics-remastered" target="_blank">Sound Physics Remastered</a>
+					<a href="https://github.com/rektroth/whiteout" target="_blank">Whiteout</a>
 				</h3>
-				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
+				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<h2>Visual Tweaks</h2>
-		<p>The following mods make changes to the user interface that either improve the visuals or provide additional information.</p>
+		<h2>Graphical and Audio Improvements</h2>
+		<p>These mods make improvements to graphics and audio.</p>
 		<div class="mod" id="betterf3">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/8shC1gFX/icon.png" />
@@ -594,6 +596,34 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
+		<div class="mod" id="cleardespawn">
+			<div class="mod-icon">
+				<img src="https://cdn-raw.modrinth.com/data/yoJJjRRE/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/cleardespawn" target="_blank">ClearDespawn</a>
+				</h3>
+				<p>Makes dropped items flash when they are about to despawn.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.1</span>
+			</div>
+		</div>
+		<div class="mod" id="effective">
+			<div class="mod-icon">
+				<img src="https://media.forgecdn.net/avatars/thumbnails/467/123/64/64/637748529243644133.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://www.curseforge.com/minecraft/mc-mods/effective" target="_blank">Effective</a>
+				</h3>
+				<p>Adds water/lava cascade and entity splash visuals and sounds.</p>
+			</div>
+			<div class="mod-version">
+				<span class="very-outdated"><span class="circle"></span> 1.19.2</span>
+			</div>
+		</div>
 		<div class="mod" id="horse-stats-vanilla">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/l4qoXLzx/icon.png" />
@@ -603,20 +633,6 @@
 					<a href="https://modrinth.com/mod/horsestatsvanilla" target="_blank">Horse Stats Vanilla</a>
 				</h3>
 				<p>Displays the stats of horses, donkeys, and mules in their inventories.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.1</span>
-			</div>
-		</div>
-		<div class="mod" id="mod-menu">
-			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/mOgUt4GM/icon.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/modmenu" target="_blank">Mod Menu</a>
-				</h3>
-				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
@@ -636,20 +652,6 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<div class="mod" id="notes">
-			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/85/870/636205417489993262.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/notes" target="_blank">Notes</a>
-				</h3>
-				<p>Adds a notepad to the game UI.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.1</span>
-			</div>
-		</div>
 		<div class="mod" id="paginated-advancements">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/pJogNFap/icon.png" />
@@ -659,6 +661,34 @@
 					<a href="https://modrinth.com/mod/paginatedadvancements" target="_blank">Paginated Advancements</a>
 				</h3>
 				<p>Overhauls the advancements screen.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.1</span>
+			</div>
+		</div>
+		<div class="mod" id="smooth-swapping">
+			<div class="mod-icon">
+				<img src="https://media.forgecdn.net/avatars/417/170/637640649236923611.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://www.curseforge.com/minecraft/mc-mods/smooth-swapping" target="_blank">Smooth Swapping</a>
+				</h3>
+				<p>Adds a smooth animation when moving items between containers.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.1</span>
+			</div>
+		</div>
+		<div class="mod" id="sound-physics-remastered">
+			<div class="mod-icon">
+				<img src="https://cdn-raw.modrinth.com/data/qyVF9oeo/798fbfae58ec95ad51f3e1d522b43227306c326c.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/sound-physics-remastered" target="_blank">Sound Physics Remastered</a>
+				</h3>
+				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
@@ -680,6 +710,20 @@
 		</div>
 		<h2>Tools</h2>
 		<p>The following mods provide tools to assist with a variety of tasks.</p>
+		<div class="mod" id="fabrishot">
+			<div class="mod-icon">
+				<img src="https://cdn-raw.modrinth.com/data/3qsfQtE9/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/fabrishot" target="_blank">Fabrishot</a>
+				</h3>
+				<p>Allows for taking screenshots of any resolution.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.1</span>
+			</div>
+		</div>
 		<div class="mod" id="litematica">
 			<div class="mod-icon">
 				<img src="https://media.forgecdn.net/avatars/thumbnails/181/712/64/64/636802492918868562.jpeg" />
@@ -708,22 +752,36 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<h2>Other Quality of Life Improvements</h2>
-		<p>The following mods offer additional visual enhancements and usseful functionalities.</p>
-		<div class="mod" id="cleardespawn">
+		<div class="mod" id="mod-menu">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/yoJJjRRE/icon.png" />
+				<img src="https://cdn-raw.modrinth.com/data/mOgUt4GM/icon.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/cleardespawn" target="_blank">ClearDespawn</a>
+					<a href="https://modrinth.com/mod/modmenu" target="_blank">Mod Menu</a>
 				</h3>
-				<p>Makes dropped items flash when they are about to despawn.</p>
+				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
+		<div class="mod" id="notes">
+			<div class="mod-icon">
+				<img src="https://media.forgecdn.net/avatars/85/870/636205417489993262.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://www.curseforge.com/minecraft/mc-mods/notes" target="_blank">Notes</a>
+				</h3>
+				<p>Adds a notepad to the game UI.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.1</span>
+			</div>
+		</div>
+		<h2>Other Quality of Life Improvements</h2>
+		<p>The following mods offer other miscellaneous functionalities.</p>
 		<div class="mod" id="dont-clear-chat-history">
 			<div class="mod-icon">
 				<img src="https://media.forgecdn.net/avatars/thumbnails/296/53/64/64/637339129152871550.png" />
@@ -738,29 +796,15 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<div class="mod" id="effective">
+		<div class="mod" id="no-fade">
 			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/thumbnails/467/123/64/64/637748529243644133.png" />
+				<img src="https://cdn-raw.modrinth.com/data/ncKjyGm3/4152b3215b7695a3e12ef1b06e47cf9aa2edf8b0.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/effective" target="_blank">Effective</a>
+					<a href="https://modrinth.com/mod/fadeless" target="_blank">Fadeless</a>
 				</h3>
-				<p>Adds water/lava cascade and entity splash visuals and sounds.</p>
-			</div>
-			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.19.2</span>
-			</div>
-		</div>
-		<div class="mod" id="fabrishot">
-			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/3qsfQtE9/icon.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/fabrishot" target="_blank">Fabrishot</a>
-				</h3>
-				<p>Allows for taking screenshots of any resolution.</p>
+				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
@@ -794,20 +838,6 @@
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<div class="mod" id="no-fade">
-			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/ncKjyGm3/4152b3215b7695a3e12ef1b06e47cf9aa2edf8b0.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/fadeless" target="_blank">Fadeless</a>
-				</h3>
-				<p>Removes all fade-out animations.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.1</span>
-			</div>
-		</div>
 		<h2>Dependencies</h2>
 		<p>The following mods are required by one or more of the mods above, or a combination of the them, to work properly.</p>
 		<div class="mod" id="cloth-config-api">
@@ -818,7 +848,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/cloth-config" target="_blank">Cloth Config API</a>
 				</h3>
-				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a> and <a href="#mod-menu">Mod Menu</a> together, <a href="#paginated-advancements">Paginated Advancements</a> and <a href="#mod-menu">Mod Menu</a> together, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> and <a href="#mod-menu">Mod Menu</a> together.</p>
+				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
@@ -846,7 +876,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/indium" target="_blank">Indium</a>
 				</h3>
-				<p>Required when using <a href="#continuity">Continuity</a> and <a href="#sodium">Sodium</a> together and/or using <a href="#enhanced-block-entities">Enhanced Block Entities</a> and <a href="#sodium">Sodium</a> together.</p>
+				<p>Required when using <a href="#continuity">Continuity</a> and/or <a href="#enhanced-block-entities">Enhanced Block Entities</a> together with <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
@@ -874,7 +904,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/qsl" target="_blank">Quilted Fabric API</a>
 				</h3>
-				<p>Required by <a href="#colormatic">Colormatic</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#ok-zoomer">Ok Zoomer</a>, <a href="#optigui">OptiGUI</a>, and <a href="#shulkerboxtooltip">ShulkerBoxTooltip</a>.</p>
+				<p>Required by <a href="#colormatic">Colormatic</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#ok-zoomer">Ok Zoomer</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulkerboxtooltip">ShulkerBoxTooltip</a>, and <a href="#smooth-swapping">Smooth Swapping</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
@@ -888,7 +918,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/yacl" target="_blank">YetAnotherConfigLib</a>
 				</h3>
-				<p>Required by <a href="#more-culling">More Culling</a>.</p>
+				<p>Required by <a href="#debugify">Debugify</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.1</span>
