--- a/mods.html
+++ b/mods.html
@@ -171,7 +171,7 @@
 					<a href="https://modrinth.com/mod/sodium" target="_blank">Sodium</a>
 				</h3>
 				<p>Modern rendering engine.</p>
-				<p>Required by <a href="#iris">Iris</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
+				<p>Required by <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
@@ -502,6 +502,20 @@
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
+		<div class="mod" id="nvidium">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/SfMw2IZN/dfd2ee7b56197c430090e38936c7e0254790f61f.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/nvidium" target="_blank">Lithium</a>
+				</h3>
+				<p>Uses the nvidia rendering engine.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
 		<h2>Bug Fixes</h2>
 		<p>These mods fix bugs.</p>
 		<div class="mod" id="debugify">
@@ -606,11 +620,11 @@
 		</div>
 		<div class="mod" id="effective">
 			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/thumbnails/467/123/64/64/637748529243644133.png" />
+				<img src="https://cdn.modrinth.com/data/pcPXJeZi/e08c4dd358a06dc90619e3b8d96883e86c950211.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/effective" target="_blank">Effective</a>
+					<a href="https://modrinth.com/mod/effective" target="_blank">Effective</a>
 				</h3>
 				<p>Adds water/lava cascade and entity splash visuals and sounds.</p>
 			</div>
