--- a/mods.html
+++ b/mods.html
@@ -508,7 +508,7 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/nvidium" target="_blank">Lithium</a>
+					<a href="https://modrinth.com/mod/nvidium" target="_blank">Nvidium</a>
 				</h3>
 				<p>Uses the nvidia rendering engine.</p>
 			</div>
