--- a/mods.html
+++ b/mods.html
@@ -912,7 +912,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/qsl" target="_blank">Quilted Fabric API</a>
 				</h3>
-				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#ok-zoomer">Ok Zoomer</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulkerboxtooltip">ShulkerBoxTooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
+				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#ok-zoomer">Ok Zoomer</a>, <a href="#optigui">OptiGUI</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
