--- a/mods.html
+++ b/mods.html
@@ -157,7 +157,7 @@
 	<body style="max-width: 800px; margin: auto;">
 		<h1>My Mods</h1>
 		<p>In what I like to call "the good ol' days," the only mod that I ever used was OptiFine, as I am what many refer to so lovingly as a "vanilla purist." But as time went on and the OptiFine mod became slower, more bloated, buggier, and more aggressive with its modifications to the game, it became clear to me that an alternative was necessary. At which point I found the mod trio Sodium, Lithium, and Phosphor, alongside a group of other mods that fulfilled OptiFine's many other features. From that day forward, my list of vanilla-esque mods has continued to grow. What follows is my complete list of mods at present.</p>
-		<p>All of these mods are used with the <a href="https://quiltmc.org/en/" target="_blank">Quilt Mod Loader</a>.</p>
+		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<p>The listed Minecraft version is the most recent <i>release</i> that each mod is <b>confirmed</b> to be <b>100% fully compatible and functional</b> with. <span class="updated">Green</span> means it is confirmed to be compatible with the latest release. <span class="outdated">Orange</span> means that it's not been officially updated to the latest release, but has been tested by <i>me</i> and <i>appears</i> to function properly. (I make no guarantee that it will work for <i>you</i>.) <span class="very-outdated">Red</span> means that it is confirmed not to work with the latest release.</p>
 		<p>Some mods also include a link to an unofficial "pre-release". These are updated versions of the mod for newer releases of Minecraft, but are <b>not sanctioned by the mod's original author</b>. There is no guarantee that they are fully compatible, that they function properly, or that they do not include malware. <b>Proceed at own risk!</b></p>
 		<h2>OptiFine Features</h2>
@@ -247,18 +247,18 @@
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
-		<div class="mod" id="ok-zoomer">
+		<div class="mod" id="zoomify">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/aXf2OSFU/icon.png" />
+				<img src="https://cdn.modrinth.com/data/w7ThoJFB/25d48c335340c12566044c8f35df5102e72dc06c.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/ok-zoomer" target="_blank">Ok Zoomer</a>
+					<a href="https://modrinth.com/mod/zoomify" target="_blank">Zoomify</a>
 				</h3>
 				<p>Adds a highly-configurable zoom.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="animatica">
@@ -904,18 +904,18 @@
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
-		<div class="mod" id="quilted-fabric-api">
+		<div class="mod" id="fabric-api">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/qvIfYCYJ/icon.png" />
+				<img src="https://cdn.modrinth.com/data/P7dR8mSH/icon.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/qsl" target="_blank">Quilted Fabric API</a>
+					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#ok-zoomer">Ok Zoomer</a>, <a href="#optigui">OptiGUI</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
+				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#optigui">OptiGUI</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
