--- a/mods.html
+++ b/mods.html
@@ -272,7 +272,7 @@
 				<p>Implements the OptiFine animated texture format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="outdated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
 		<div class="mod" id="cit-resewn">
@@ -300,7 +300,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.4</span>
+				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -513,7 +513,7 @@
 				<p>Uses the nvidia rendering engine.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.4</span>
+				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -557,7 +557,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="outdated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
@@ -615,7 +615,7 @@
 				<p>Makes dropped items flash when they are about to despawn.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="outdated"><span class="circle"></span> 1.20.2</span>
 			</div>
 		</div>
 		<div class="mod" id="effective">
@@ -729,7 +729,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="litematica">
@@ -862,6 +862,20 @@
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
+		<div class="mod" id="fabric-api">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/P7dR8mSH/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
+				</h3>
+				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#optigui">OptiGUI</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
 		<div class="mod" id="fabric-language-kotlin">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/Ha28R6CL/icon.png" />
@@ -884,10 +898,10 @@
 				<h3>
 					<a href="https://modrinth.com/mod/indium" target="_blank">Indium</a>
 				</h3>
-				<p>Required when using <a href="#enhanced-block-entities">Enhanced Block Entities</a> and/or <a href="#vanadium">Vanadium</a> together with <a href="#sodium">Sodium</a>.</p>
+				<p>Required when using <a href="#continuity">Continuity</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, and/or <a href="#vanadium">Vanadium</a> together with <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.4</span>
+				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
@@ -899,20 +913,6 @@
 					<a href="https://www.curseforge.com/minecraft/mc-mods/malilib" target="_blank">MaLiLib</a>
 				</h3>
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.20.4</span>
-			</div>
-		</div>
-		<div class="mod" id="fabric-api">
-			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/P7dR8mSH/icon.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
-				</h3>
-				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#optigui">OptiGUI</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
