Add 3d skins and modernfix

--- a/mods.html
+++ b/mods.html
@@ -560,6 +560,20 @@
 				<span class="outdated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
+		<div class="mod" id="modern-fix">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/nmDcB62a/e1d2433476995be1b1a94ff1afaf6167752274ae.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/modernfix" target="_blank">ModernFix</a>
+				</h3>
+				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
 		<div class="mod" id="whiteout">
 			<div class="mod-icon">
 				<img src="https://raw.githubusercontent.com/Rektroth/Whiteout/master/src/main/resources/assets/whiteout/icon.png" />
@@ -576,6 +590,20 @@
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
 		<p>These mods make improvements to graphics and audio.</p>
+		<div class="mod" id="3d-skin-layers">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/zV5r3pPn/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/3dskinlayers" target="_blank">3D Skin Layers</a>
+				</h3>
+				<p>Renders player skins in 3D.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
 		<div class="mod" id="betterf3">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/8shC1gFX/icon.png" />
