--- a/mods.html
+++ b/mods.html
@@ -300,7 +300,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -385,7 +385,7 @@
 				<p>Implements the OptiFine custom colors format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="outdated"><span class="circle"></span> 1.20.2</span>
 			</div>
 		</div>
 		<h2>Other Performance Enhancements</h2>
@@ -415,7 +415,7 @@
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="outdated"><span class="circle"></span> 1.20.2</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
@@ -513,7 +513,7 @@
 				<p>Uses the nvidia rendering engine.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -929,7 +929,7 @@
 				<p>Required when using <a href="#continuity">Continuity</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, and/or <a href="#vanadium">Vanadium</a> together with <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
