--- a/mods.html
+++ b/mods.html
@@ -230,7 +230,7 @@
 				<p>Dynamic lighting.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="more-culling">
