Update MaliLib link

--- a/mods.html
+++ b/mods.html
@@ -934,11 +934,11 @@
 		</div>
 		<div class="mod" id="malilib">
 			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/thumbnails/171/135/64/64/636727036520163113.png" />
+				<img src="https://cdn.modrinth.com/data/GcWjdA9I/a530ae55df5e0c405f5cf1b3e4fd6163a398bdc3.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/malilib" target="_blank">MaLiLib</a>
+					<a href="https://modrinth.com/mod/malilib" target="_blank">MaLiLib</a>
 				</h3>
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
