--- a/mods.html
+++ b/mods.html
@@ -671,7 +671,7 @@
 				<p>Displays the stats of horses, donkeys, and mules in their inventories.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="outdated"><span class="circle"></span> 1.20.2</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
