--- a/mods.html
+++ b/mods.html
@@ -390,6 +390,20 @@
 		</div>
 		<h2>Other Performance Enhancements</h2>
 		<p>The following mods offer performance improvements beyond those provided by OptiFine.</p>
+		<div class="mod" id="distant-horizons">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/uCdwusMi/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/distanthorizons" target="_blank">Distant Horizons</a>
+				</h3>
+				<p>See farther without turning your game into a slide show.</p>
+			</div>
+			<div class="mod-version">
+				<span class="very-outdated"><span class="circle"></span> 1.20.2</span>
+			</div>
+		</div>
 		<div class="mod" id="dynamic-fps">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/LQ3K71Q1/icon.png" />
@@ -660,20 +674,6 @@
 				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
-		<div class="mod" id="horse-stats-vanilla">
-			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/l4qoXLzx/icon.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/horsestatsvanilla" target="_blank">Horse Stats Vanilla</a>
-				</h3>
-				<p>Displays the stats of horses, donkeys, and mules in their inventories.</p>
-			</div>
-			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.2</span>
-			</div>
-		</div>
 		<div class="mod" id="not-enough-animations">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/MPCX6s5C/icon.png" />
@@ -760,6 +760,20 @@
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
+		<div class="mod" id="horse-stats-vanilla">
+			<div class="mod-icon">
+				<img src="https://cdn-raw.modrinth.com/data/l4qoXLzx/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/horsestatsvanilla" target="_blank">Horse Stats Vanilla</a>
+				</h3>
+				<p>Displays the stats of horses, donkeys, and mules in their inventories.</p>
+			</div>
+			<div class="mod-version">
+				<span class="outdated"><span class="circle"></span> 1.20.2</span>
+			</div>
+		</div>
 		<div class="mod" id="litematica">
 			<div class="mod-icon">
 				<img src="https://media.forgecdn.net/avatars/thumbnails/181/712/64/64/636802492918868562.jpeg" />
@@ -811,6 +825,20 @@
 					<a href="https://www.curseforge.com/minecraft/mc-mods/notes" target="_blank">Notes</a>
 				</h3>
 				<p>Adds a notepad to the game UI.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
+		<div class="mod" id="shulker-box-tooltip">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/2M01OLQq/dae30b8d8b277b6ebd80a7338234fdd2ae04ed75.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/shulkerboxtooltip" target="_blank">Shulker Box Tooltip</a>
+				</h3>
+				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
@@ -898,7 +926,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#optigui">OptiGUI</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
+				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
