Add c2me and noisium

--- a/mods.html
+++ b/mods.html
@@ -390,6 +390,20 @@
 		</div>
 		<h2>Other Performance Enhancements</h2>
 		<p>The following mods offer performance improvements beyond those provided by OptiFine.</p>
+		<div class="mod" id="concurrent-chunk-management-engine">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/VSNURh3q/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/c2me-fabric" target="_blank">Concurent Chunk Management Engine</a>
+				</h3>
+				<p>A Fabric mod designed to improve the chunk performance of Minecraft.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
 		<div class="mod" id="distant-horizons">
 			<div class="mod-icon">
 				<img src="https://cdn.modrinth.com/data/uCdwusMi/icon.png" />
@@ -511,6 +525,20 @@
 					<a href="https://modrinth.com/mod/lithium" target="_blank">Lithium</a>
 				</h3>
 				<p>Optimizes general game logic to improve tick speed.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
+		<div class="mod" id="noisium">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/KuNKN7d2/6217fb8bc818c19fdd461a5d4e13ffbbbc95db6b.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/noisium" target="_blank">Noisium</a>
+				</h3>
+				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
