--- a/mods.html
+++ b/mods.html
@@ -599,7 +599,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.1</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="modern-fix">
