Unofficial 1.20.4 CIT Resewn

--- a/mods.html
+++ b/mods.html
@@ -286,7 +286,7 @@
 				<p>Implements the OptiFine custom item textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.1</span>
+				<a href="https://github.com/dicedpixels/CITResewn/releases/tag/1.20.4-1.1.4-dicedpixels" target="_blank">UNOFFICIAL 1.20.4 BUILD</a>
 			</div>
 		</div>
 		<div class="mod" id="continuity">
