update mod menu icon

--- a/mods.html
+++ b/mods.html
@@ -832,7 +832,7 @@
 		</div>
 		<div class="mod" id="mod-menu">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/mOgUt4GM/icon.png" />
+				<img src="https://cdn.modrinth.com/data/mOgUt4GM/530e1c50e9d3c2ea1aab98c0dc5a7faead8a2a87.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
