Update ETF and EMF icons

--- a/mods.html
+++ b/mods.html
@@ -305,7 +305,7 @@
 		</div>
 		<div class="mod" id="entity-model-features">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/4I1XuqiY/5e127e83e3b55e3cebf32e3e8b355296ea62d87d.png" />
+				<img src="https://cdn.modrinth.com/data/4I1XuqiY/7a6acd528931a1a0d1b60fd0925b88227fb345cc.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
@@ -319,7 +319,7 @@
 		</div>
 		<div class="mod" id="entity-texture-features">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/BVzZfTc1/4a9fe8d33f8dcc4a61abf23919d9c04871f41937.png" />
+				<img src="https://cdn.modrinth.com/data/BVzZfTc1/fa03aea7027f38b272a249d26cbe4cb7e94becf1.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
