--- a/mods.html
+++ b/mods.html
@@ -674,18 +674,32 @@
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
-		<div class="mod" id="cleardespawn">
+		<div class="mod" id="blur">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/yoJJjRRE/icon.png" />
+				<img src="https://cdn.modrinth.com/data/NK39zBp2/icon.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/cleardespawn" target="_blank">ClearDespawn</a>
+					<a href="https://modrinth.com/mod/blur-fabric" target="_blank">Blur</a>
 				</h3>
-				<p>Makes dropped items flash when they are about to despawn.</p>
+				<p>Adds a blur effect to all GUI backgrounds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
+		<div class="mod" id="drip-sounds">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/T8MMXTpr/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Drip Sounds</a>
+				</h3>
+				<p>Adds sounds for drip particles landing.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
 			</div>
 		</div>
 		<div class="mod" id="effective">
@@ -767,6 +781,20 @@
 					<a href="https://modrinth.com/mod/tiny-item-animations" target="_blank">Tiny Item Animations</a>
 				</h3>
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
+		<div class="mod" id="wavey-capes">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/kYuIpRLv/8c7d460e1c4a396970b1e016d3889509ef473c25.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/wavey-capes" target="_blank">Wavey Capes</a>
+				</h3>
+				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.20.4</span>
@@ -874,6 +902,34 @@
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
 		<p>The following mods offer other miscellaneous functionalities.</p>
+		<div class="mod" id="chat-heads">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/Wb5oqrBJ/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/chat-heads" target="_blank">Chat Heads</a>
+				</h3>
+				<p>See who you're chatting with!</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.20.4</span>
+			</div>
+		</div>
+		<div class="mod" id="cleardespawn">
+			<div class="mod-icon">
+				<img src="https://cdn-raw.modrinth.com/data/yoJJjRRE/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/cleardespawn" target="_blank">ClearDespawn</a>
+				</h3>
+				<p>Makes dropped items flash when they are about to despawn.</p>
+			</div>
+			<div class="mod-version">
+				<span class="outdated"><span class="circle"></span> 1.20.2</span>
+			</div>
+		</div>
 		<div class="mod" id="dont-clear-chat-history">
 			<div class="mod-icon">
 				<img src="https://media.forgecdn.net/avatars/thumbnails/296/53/64/64/637339129152871550.png" />
