--- a/mods.html
+++ b/mods.html
@@ -429,7 +429,7 @@
 				<p>Improves performance when Minecraft is in the background.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.20.5</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -657,7 +657,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="outdated"><span class="circle"></span> 24w12a</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -985,7 +985,7 @@
 				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="very-outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="outdated"><span class="circle"></span> 24w14a</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
